--- a/ThreadsAndConcurrency/RacingCars/task-info.yaml
+++ b/ThreadsAndConcurrency/RacingCars/task-info.yaml
@@ -4,27 +4,27 @@ files:
   visible: true
   placeholders:
   - offset: 160
-    length: 34
+    length: 15
     placeholder_text: "/* TODO \nCreate a racer with c1 */"
     initial_state:
       length: 34
       offset: 160
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: acer1 = new Ra
-  - offset: 216
-    length: 33
+  - offset: 197
+    length: 14
     placeholder_text: "/* TODO \nCreate a Racer with c2*/"
     initial_state:
       length: 33
       offset: 216
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: ' racer2 = new '
-  - offset: 256
-    length: 143
+  - offset: 218
+    length: 213
     placeholder_text: "/* TODO:\nCreate two threads using \"new Thread\" and pass\
       \  one Runnable \nto each thread.  It is your job to figure out which are the\
       \ Runnables.*/"
@@ -32,8 +32,8 @@ files:
       length: 143
       offset: 256
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       2);
               new Thread(racer1).start();
@@ -79,7 +79,7 @@ files:
   visible: true
   placeholders:
   - offset: 460
-    length: 150
+    length: 255
     placeholder_text: "/* TODO \nmove should subtract  'miles' from the miles left\
       \ to travel and add 'miles' to the odometer. The miles to travel cannot be less\
       \ than zero. */"
@@ -87,8 +87,8 @@ files:
       length: 150
       offset: 460
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       this.miles = this.miles>0?this.miles - miles:0;
               this.odometer+=miles;
@@ -107,7 +107,7 @@ files:
 - name: src/Racer.java
   visible: true
   placeholders:
-  - offset: 19
+  - offset: 39
     length: 90
     placeholder_text: "/* TODO \nAdd something here so that you can pass this Racer\
       \ to the constructor of Thread*/"
@@ -116,23 +116,23 @@ files:
       offset: 19
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: implements Runnable
-  - offset: 204
-    length: 76
+  - offset: 224
+    length: 128
     placeholder_text: "/* TODO \nCreate a constructor that receives a Car objec and\
       \ initializes c.*/"
     initial_state:
       length: 76
       offset: 204
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       public Racer(Car c){
               this.c=c;
           }
-  - offset: 299
+  - offset: 372
     length: 151
     placeholder_text: "/* TODO \nOverride one method.  This is the task the thread\
       \ will perform... You have to determine which method this is.\nCheck the method\
@@ -142,7 +142,7 @@ files:
       offset: 299
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: |-
       public void run() {
               while (c.odometer<distance)
@@ -167,5 +167,8 @@ files:
     \ You have to determine which method this is.\nCheck the method description. */\n\
     }\n"
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 28 Mar 2022 21:27:25 UTC
 record: -1
